--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.13.0",
-    "@nuxtjs/color-mode": "^3.4.0",
-    "jspdf": "^2.5.2"
+    "@jsonresume/schema": "^1.2.1",
+    "@nuxt/icon": "^2.2.0",
+    "@nuxtjs/color-mode": "^4.0.0",
+    "jspdf": "^2.5.2",
+    "nuxt": "^4.2.2"
   },
   "devDependencies": {
+    "@kurone-kito/jsonresume-types": "^0.4.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "tailwindcss": "^3.4.0"
   }
