--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
+      - HOST=0.0.0.0
+      - PORT=3000
       - NUXT_PUBLIC_LOGO_DEV_API_KEY=${LOGO_DEV_API_KEY:-}
     restart: unless-stopped
     healthcheck:
